Fix panel title alignment issue

--- a/src/app.scss
+++ b/src/app.scss
@@ -260,10 +260,6 @@ selection-view, .main-editable-content {
   margin-left: 20px;
 }
 
-.panel-title span {
-  vertical-align: middle;
-}
-
 .breadcrumb {
   margin-bottom: 0;
   border: none;
